tests/expectations/compiler/tuple/tuple_in_function_param.out
Error [ETYC0372051]: A function cannot take in a tuple as input.
    --> compiler-test:3:12
     |
   3 |     fn foo(a: (u8, u16)) -> (u8, u16) {
     |            ^^^^^^^^^^^^
